--- a/style/css/styles.css
+++ b/style/css/styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #F8C8DC;
+    background-color: #a79ca0;
 }
 
 /* Position the "No" button absolutely within body */
