--- a/style/css/yes_styles.css
+++ b/style/css/yes_styles.css
@@ -3,7 +3,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-color: #F8C8DC;
+    background-color: #fff7ba;
 }
 
 /* Position the "No" button absolutely within body */
@@ -24,7 +24,7 @@ body {
     font-family: 'Nunito';
     font-size: 50px;
     font-weight: bold;
-    color: white;
+    color: rgb(251, 185, 105);
     text-align: center;
     margin-top: 20px;
     margin-bottom: 0px;
@@ -34,7 +34,7 @@ body {
     font-family: 'Nunito';
     font-size: 25px;
     font-weight: bold;
-    color: white;
+    color: rgb(251, 185, 105);
     text-align: center;
     margin-top: 20px;
     margin-bottom: 0px;
